# fast_library

./: .dockerignore  README.md  docker-compose.app.yml  docker-compose.yml  dockerfile  pyproject.toml  test_api.http
app/: main.py
app/core/: config.py  database.py  dependencies.py  logging.py
app/models/: book.py  books.py  users.py
app/routers/: auth_middleware.py  books.py  health.py  users.py
app/services/: library_manager.py  library_psql.py  user_manager.py  users_manager.py  users_psql.py
sql/: init.sql
sql/demo_data/: 001_base_data.sql  002_demo_users.sql
sql/migrations/: 001_init.sql  002_add_borrowing_index.sql  003_drop_status.sql  004_add_isbn_unique.sql
tests/: conftest.py
tests/core/: test_config.py  test_database.py  test_logging.py
tests/routers/: test_auth_middleware.py  test_books.py  test_health.py  test_users.py
tests/services/: test_library_manager.py  test_library_psql.py  test_user_manager.py  test_users_psql.py
